fixup some spacing shenanigans

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -32,3 +32,7 @@ ol {
     font-family: "Lucida Console", "Courier New", monospace;
     color: #262626;
 }
+
+li{
+    margin: 10px 0;
+  }
